--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
     <link rel="stylesheet" href="myCSS.css" />
 </head>
 <body>
-    <div class="container py-5">
-        <h1>Car Management</h1>
-        <p class="mt-4">TEXT ...</p>
+    <div class="container py-5" style="background-color: #f2f2f2; border-bottom: 2px solid #ccc;">
+        <div class="text-center">
+            <h1>Car Management</h1>
+            <form class="d-flex justify-content-center mt-3">
+                <input class="form-control w-75" type="search" placeholder="Search" aria-label="Search">
+                <button type="button" class="btn btn-outline-secondary ms-2">
+                    <i class="fa-solid fa-gear"></i>
+                </button>
+            </form>
+        </div>
     </div>
 
     <footer class="fixed-bottom bg-light py-2 border-top">
