--- a/addcar.html
+++ b/addcar.html
@@ -20,7 +20,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <link rel="stylesheet" href="myCSS.css" />
+        <link rel="stylesheet" href="css/myCSS.css" />
         <style>
             body {
                 padding-bottom: 80px; /* Add padding to prevent footer from covering content */
@@ -146,6 +146,6 @@
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
             crossorigin="anonymous"
         ></script>
-        <script src="script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
