--- a/garage.html
+++ b/garage.html
@@ -21,8 +21,8 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
-		<link rel="stylesheet" href="myCSS.css" />
-		<link rel="stylesheet" href="garage.css" />
+		<link rel="stylesheet" href="css/myCSS.css" />
+		<link rel="stylesheet" href="css/garage.css" />
 	</head>
 	<body>
         <div class="container py-5" style="background-color: #f2f2f2; border-bottom: 2px solid #ccc;">
@@ -107,5 +107,5 @@
 		integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
 		crossorigin="anonymous"
 	></script>
-	<script src="garage.js"></script>
+	<script src="js/garage.js"></script>
 </html>
