--- a/addcar.html
+++ b/addcar.html
@@ -146,6 +146,7 @@
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
             crossorigin="anonymous"
         ></script>
-        <script src="js/script.js"></script>
+        <script type="module" src="js/addcar.js"></script>
+        <script type="module" src="js/checkAuth.js"></script>
     </body>
 </html>
