--- a/garage.html
+++ b/garage.html
@@ -107,5 +107,6 @@
 		integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
 		crossorigin="anonymous"
 	></script>
-	<script src="js/garage.js"></script>
+	<script type="module" src="js/garage.js"></script>
+	<script type="module" src="js/checkAuth.js"></script>
 </html>
