--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <!-- + Button -->
                 <div class="col">
-                    <a href="new.html" class="btn btn-primary rounded-circle position-absolute top-0 start-50 translate-middle plus-btn">
+                    <a href="addcar.html" class="btn btn-primary rounded-circle position-absolute top-0 start-50 translate-middle plus-btn">
                         <i class="fa-solid fa-plus fa-lg"></i>
                     </a>
                 </div>
@@ -65,6 +65,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script type="module" src="js/checkAuth.js"></script>
 </body>
 </html>
