--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         </div>
     </div>
 
+    <div class="floating-buttons justify-content-around">
+        <button type="button" class="btn btn-primary mx-2" data-target="addcar.html">Add Car</button>
+        <button type="button" class="btn btn-primary mx-2" data-target="setReminder.html">Set Reminder</button>
+        <button type="button" class="btn btn-primary mx-2" data-target="scheduleMaintenance.html">Schedule Maintenance</button>
+    </div>
+
     <footer class="fixed-bottom bg-light py-2 border-top">
         <div class="container">
             <div class="row text-center">
@@ -41,7 +47,7 @@
                 </div>
                 <!-- + Button -->
                 <div class="col">
-                    <a href="addcar.html" class="btn btn-primary rounded-circle position-absolute top-0 start-50 translate-middle plus-btn">
+                    <a href="#" id="plusBtn" class="btn btn-primary rounded-circle position-absolute top-0 start-50 translate-middle plus-btn">
                         <i class="fa-solid fa-plus fa-lg"></i>
                     </a>
                 </div>
@@ -66,5 +72,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script type="module" src="js/checkAuth.js"></script>
+    <script src="js/plusbtn.js"></script>
 </body>
 </html>
