--- a/garage.html
+++ b/garage.html
@@ -25,26 +25,46 @@
 		<link rel="stylesheet" href="css/garage.css" />
 	</head>
 	<body>
-        <div class="container py-5" style="background-color: #f2f2f2; border-bottom: 2px solid #ccc;">
-            <div class="text-center">
-                <h1>Car Management</h1>
-                <form class="d-flex justify-content-center mt-3">
-                    <input class="form-control w-75" type="search" placeholder="Search" aria-label="Search">
-                    <button type="button" class="btn btn-outline-secondary ms-2">
-                        <i class="fa-solid fa-gear"></i>
-                    </button>
-                </form>
-            </div>
-        </div>
+		<!-- Pop up: Add this somewhere in your garage.html -->
+		<div id="popupMessage" style="display:none; position:fixed; top:30px; left:50%; transform:translateX(-50%); background:#222; color:#fff; padding:20px 30px; border-radius:10px; z-index:9999; box-shadow:0 2px 8px rgba(0,0,0,0.2); font-size:1.1rem;">
+			<span id="popupText"></span>
+			<button id="closePopup" style="margin-left:20px; background:none; border:none; color:#fff; font-weight:bold; font-size:1.2em; cursor:pointer;">&times;</button>
+		</div>
+		<div id="confirmRemovePopup" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); background:#fff; color:#222; padding:24px 32px; border-radius:10px; z-index:10000; box-shadow:0 2px 8px rgba(0,0,0,0.2); font-size:1.1rem; min-width:260px;">
+			<span id="confirmRemoveText">Are you sure you want to remove this vehicle?</span>
+			<div class="mt-3 text-end">
+				<button id="cancelRemoveBtn" class="btn btn-secondary btn-sm me-2">Cancel</button>
+				<button id="confirmRemoveBtn" class="btn btn-danger btn-sm">Remove</button>
+			</div>
+		</div>
+		<div
+			class="container py-5"
+			style="background-color: #f2f2f2; border-bottom: 2px solid #ccc"
+		>
+			<div class="text-center">
+				<h1>Car Management</h1>
+				<form class="d-flex justify-content-center mt-3">
+					<input
+						class="form-control w-75"
+						type="search"
+						placeholder="Search"
+						aria-label="Search"
+					/>
+					<button type="button" class="btn btn-outline-secondary ms-2">
+						<i class="fa-solid fa-gear"></i>
+					</button>
+				</form>
+			</div>
+		</div>
 
 		<h1 class="text-center my-3">
-            My Garage <i class="fa-solid fa-car me-2"></i>
-        </h1>
+			My Garage <i class="fa-solid fa-car me-2"></i>
+		</h1>
 		<div class="garage-container container-fluid">
 			<div class="row gx-2" id="garageRow"></div>
 		</div>
-		
-        <footer class="fixed-bottom bg-light py-2 border-top">
+
+		<footer class="fixed-bottom bg-light py-2 border-top">
 			<div class="container">
 				<div class="row text-center">
 					<!-- Home Button -->
@@ -67,7 +87,7 @@
 					<!-- + Button -->
 					<div class="col">
 						<a
-							href="new.html"
+							href="addcar.html"
 							class="btn btn-primary rounded-circle position-absolute top-0 start-50 translate-middle plus-btn"
 						>
 							<i class="fa-solid fa-plus fa-lg"></i>
@@ -98,8 +118,8 @@
 		</footer>
 	</body>
 	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-		integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ENjdO4Dr2bkBIFxQpeoA6DQD1KQ2DFiZm5l6DQ5r6bQ1hZJI1yQnN0R8M9v1WTRi"
 		crossorigin="anonymous"
 	></script>
 	<script
