--- a/setReminder.html
+++ b/setReminder.html
@@ -7,25 +7,20 @@
     <title>Car Management</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
     <link rel="stylesheet" href="css/myCSS.css" />
 </head>
 <body>
     <div class="container py-5" style="background-color: #f2f2f2; border-bottom: 2px solid #ccc;">
         <div class="text-center">
             <h1>Car Management</h1>
-            <form class="d-flex justify-content-center mt-3">
-                <input class="form-control w-75" type="search" placeholder="Search" aria-label="Search">
-                <button type="button" class="btn btn-outline-secondary ms-2">
-                    <i class="fa-solid fa-gear"></i>
-                </button>
-            </form>
         </div>
     </div>
 
     <div class="container">
         <div class="text-center mt-4">
             <h2>Set Reminder</h2>
-            <form id="reminderForm" class="mt-3">
+            <form id="reminderForm" class="mt-3 needs-validation" novalidate>
                 <div class="mb-4">
                     <label for="typeReminder" class="form-label">Type of Reminder</label>
                     <select class="form-select" id="typeSelect" required>
@@ -36,8 +31,8 @@
                         <option value="changeTires">Change Tires</option>
                         <option value="changeOil">Change Oil</option>
                         <option value="other">Other</option>
-                        <input type="text" class="form-control" id="otherTypeInput" placeholder="Specify type" style="display: none; width: 200px;">
                     </select>
+                    <input type="text" class="form-control mt-2" id="otherTypeInput" placeholder="Specify type" style="display: none; width: 200px;">
                 </div>
                 <div class="mb-4">
                     <label for="carSelect" class="form-label">Select Car</label>
@@ -47,21 +42,20 @@
                     </select>
                 </div>
                 <div class="mb-4">
-                    <label for="numKm" class="form-label">Number of Kilometers</label>
-                    <input type="number" class="form-control" id="numKm" placeholder="Enter number of kilometers" required>
+                    <label for="numKm" class="form-label">Number of Kilometers (*)</label>
+                    <input type="number" class="form-control" id="numKm" placeholder="Enter number of kilometers">
                 </div>
                 <div class="mb-4">
                     <label for="reminderDate" class="form-label">Reminder Date</label>
-                    <input type="date" class="form-control" id="reminderDate" required>
+                    <input type="text" class="form-control" id="reminderDate" required>
+                    <div class="invalid-feedback">Please select a date in the future.</div>
                 </div>
-                <button type="submit" class="btn btn-primary">Set Reminder</button>
+                <button type="submit" class="btn btn-primary">Confirm</button>
                 <button type="reset" class="btn btn-secondary ms-2">Reset</button>
-
+                <p class="mt-3">(*) Optional</p>
             </form>
     </div>
 
-
-    
     <div class="floating-buttons justify-content-around">
         <button type="button" class="btn btn-primary mx-2" data-target="addcar.html">Add Car</button>
         <button type="button" class="btn btn-primary mx-2" data-target="setReminder.html">Set Reminder</button>
@@ -109,25 +103,22 @@
         </div>
     </footer>
 
+    <!-- Success Toast -->
+    <div id="successToast" class="toast align-items-center text-bg-success border-0 
+        position-fixed top-50 start-50 translate-middle" role="alert"
+        aria-live="assertive" aria-atomic="true" data-bs-delay="1500">
+    <div class="d-flex">
+        <div class="toast-body">
+        Reminder set successfully!
+        </div>
+    </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
     <script type="module" src="js/checkAuth.js"></script>
     <script src="js/plusbtn.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const typeSelect = document.getElementById('typeSelect');
-            const otherTypeInput = document.getElementById('otherTypeInput');
-            typeSelect.addEventListener('change', function () {
-                if (typeSelect.value === 'other') {
-                    otherTypeInput.style.display = 'block';
-                    otherTypeInput.required = true;
-                } else {
-                    otherTypeInput.style.display = 'none';
-                    otherTypeInput.required = false;
-                    otherTypeInput.value = '';
-                }
-            });
-        });
-    </script>
+    <script type="module" src="js/setReminder.js"></script>
 </body>
 </html>
