--- a/setReminder.html
+++ b/setReminder.html
@@ -50,8 +50,18 @@
                     <input type="text" class="form-control" id="reminderDate" required>
                     <div class="invalid-feedback">Please select a date in the future.</div>
                 </div>
-                <button type="submit" class="btn btn-primary">Confirm</button>
-                <button type="reset" class="btn btn-secondary ms-2">Reset</button>
+                <div class="row mt-4">
+                    <div class="col-6">
+                        <a href="index.html" class="btn btn-danger btn-lg w-100">
+                            <i class="fa-solid fa-xmark"></i> Cancel
+                        </a>
+                    </div>
+                    <div class="col-6">
+                        <button type="submit" class="btn btn-success btn-lg w-100">
+                            <i class="fa-solid fa-plus"></i> Add
+                        </button>
+                    </div>
+                </div>
                 <p class="mt-3">(*) Optional</p>
             </form>
     </div>
