--- a/addcar.html
+++ b/addcar.html
@@ -98,37 +98,37 @@
         <footer class="fixed-bottom bg-light py-2 border-top">
             <div class="container">
                 <div class="row text-center">
-                    <!-- Home Button -->
+                    <!-- Reminder Button -->
                     <div class="col">
-                        <a href="index.html" class="btn btn-link text-secondary footer-btn">
-                            <i class="fa-solid fa-house"></i>
-                            <div>Home</div>
+                        <a href="index.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
+                            <i class="fa-solid fa-clock" style="margin-bottom: 2px;"></i>
+                            <div style="margin-top: 2px;">Reminders</div>
                         </a>
                     </div>
                     <!-- Garage Button -->
                     <div class="col">
-                        <a href="garage.html" class="btn btn-link text-secondary footer-btn">
-                            <i class="fa-solid fa-car"></i>
+                        <a href="garage.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
+                            <i class="fa-solid fa-car" style="margin-bottom: 2px;"></i>
                             <div>Garage</div>
                         </a>
                     </div>
                     <!-- + Button -->
                     <div class="col">
-                        <a href="new.html" class="btn btn-primary rounded-circle position-absolute top-0 start-50 translate-middle plus-btn">
+                        <a href="#" id="plusBtn" class="btn btn-primary rounded-circle position-absolute top-0 start-50 translate-middle plus-btn">
                             <i class="fa-solid fa-plus fa-lg"></i>
                         </a>
                     </div>
                     <!-- Mechanic Button -->
                     <div class="col">
-                        <a href="mechanic.html" class="btn btn-link text-secondary footer-btn">
-                            <i class="fa-solid fa-screwdriver"></i>
-                            <div>Mechanic</div>
+                        <a href="x.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
+                            <i class="fa-solid fa-map" style="margin-bottom: 2px;"></i>
+                            <div>Map</div>
                         </a>
                     </div>
                     <!-- Messages Button -->
                     <div class="col">
-                        <a href="messages.html" class="btn btn-link text-secondary footer-btn">
-                            <i class="fa-solid fa-message"></i>
+                        <a href="messages.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
+                            <i class="fa-solid fa-message" style="margin-bottom: 2px;"></i>
                             <div>Messages</div>
                         </a>
                     </div>
