--- a/auth.html
+++ b/auth.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/myCSS.css">
     <style>
         .form-container {
-            width: 400px;
             margin: 0 auto;
             padding: 20px;
             border: 1px solid #ddd;
@@ -26,6 +25,7 @@
 <body>
     <div class="container py-5">
         <div class="text-center">
+            <img src="images/logo.png" alt="Logo" style="height:64px; margin-bottom: 10px;">
             <h1>Car Management</h1>
         </div>
         <div class="form-container">
