--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h1>Car Management</h1>
             <form class="d-flex justify-content-center mt-3">
                 <input class="form-control w-75" type="search" placeholder="Search" aria-label="Search">
-                <button type="button" class="btn btn-outline-secondary ms-2">
+                <a href="definitions.html" class="btn btn-outline-secondary ms-2">
                     <i class="fa-solid fa-gear"></i>
-                </button>
+                </a>
             </form>
         </div>
     </div>
