--- a/definitions.html
+++ b/definitions.html
@@ -9,8 +9,17 @@
     <link rel="stylesheet" href="css/myCSS.css" />
 </head>
 <body>
+    <div class="container-fluid py-5" style="background-color: #f2f2f2; border-bottom: 2px solid #ccc;">
+        <div class="text-center">
+            <img src="images/logo.png" alt="Logo" style="height:64px; margin-bottom: 10px;">
+            <h1>Car Management</h1>
+        </div>
+    </div>
     <div class="container py-5">
         <h1 class="text-center mb-4"><i class="fa-solid fa-gear"></i> Definitions</h1>
+        <a href="scheduleMaintenance.html" class="btn btn-outline-secondary">
+            <i class="fa-solid fa-arrow-left"></i>
+        </a>
         <div class="card mx-auto" style="max-width: 400px;">
             <div class="card-body">
                 <h5 class="card-title mb-3">Account</h5>
