--- a/garage.html
+++ b/garage.html
@@ -25,7 +25,7 @@
 		<link rel="stylesheet" href="css/garage.css" />
 	</head>
 	<body>
-		<!-- Pop up: Add this somewhere in your garage.html -->
+		<!-- Pop up -->
 		<div id="popupMessage" style="display:none; position:fixed; top:30px; left:50%; transform:translateX(-50%); background:#222; color:#fff; padding:20px 30px; border-radius:10px; z-index:9999; box-shadow:0 2px 8px rgba(0,0,0,0.2); font-size:1.1rem;">
 			<span id="popupText"></span>
 			<button id="closePopup" style="margin-left:20px; background:none; border:none; color:#fff; font-weight:bold; font-size:1.2em; cursor:pointer;">&times;</button>
@@ -37,22 +37,15 @@
 				<button id="confirmRemoveBtn" class="btn btn-danger btn-sm">Remove</button>
 			</div>
 		</div>
-		<div
-			class="container py-5"
-			style="background-color: #f2f2f2; border-bottom: 2px solid #ccc"
-		>
+		<div class="container-fluid py-5" style="background-color: #f2f2f2; border-bottom: 2px solid #ccc;">
 			<div class="text-center">
+				<img src="images/logo.png" alt="Logo" style="height:40px; margin-bottom: 10px;">
 				<h1>Car Management</h1>
 				<form class="d-flex justify-content-center mt-3">
-					<input
-						class="form-control w-75"
-						type="search"
-						placeholder="Search"
-						aria-label="Search"
-					/>
-					<button type="button" class="btn btn-outline-secondary ms-2">
+					<input class="form-control w-75" type="search" placeholder="Search" aria-label="Search">
+					<a href="definitions.html" class="btn btn-outline-secondary ms-2">
 						<i class="fa-solid fa-gear"></i>
-					</button>
+					</a>
 				</form>
 			</div>
 		</div>
@@ -64,6 +57,13 @@
 			<div class="row gx-2" id="garageRow"></div>
 		</div>
 
+		<!-- Floating Btns-->
+		<div class="floating-buttons justify-content-around">
+			<button type="button" class="btn btn-primary mx-2" data-target="addcar.html">Add Car</button>
+			<button type="button" class="btn btn-primary mx-2" data-target="setReminder.html">Set Reminder</button>
+			<button type="button" class="btn btn-primary mx-2" data-target="scheduleMaintenance.html">Schedule Maintenance</button>
+		</div>
+		<!-- Footer -->
 		<footer class="fixed-bottom bg-light py-2 border-top">
 			<div class="container">
 				<div class="row text-center">
@@ -117,4 +117,5 @@
 	></script>
 	<script type="module" src="js/garage.js"></script>
 	<script type="module" src="js/checkAuth.js"></script>
+	<script src="js/plusbtn.js"></script>
 </html>
