--- a/selectShop.html
+++ b/selectShop.html
@@ -21,8 +21,13 @@
         </style>
     </head>
     <body>
-        <div class="container py-5">
-            <h1 class="text-center">Car Manager</h1>
+        <div class="container-fluid py-5" style="background-color: #f2f2f2; border-bottom: 2px solid #ccc;">
+            <div class="text-center">
+                <img src="images/logo.png" alt="Logo" style="height:40px; margin-bottom: 10px;">
+                <h1>Car Management</h1>
+            </div>
+        </div>
+        <div class="container">
             <div class="mt-4">
                 <h2 class="mb-4 d-flex justify-content-between align-items-center">
                     <span>
@@ -37,6 +42,13 @@
             <div id="map"></div>
         </div>
         
+        <!-- Floating Btns -->
+        <div class="floating-buttons justify-content-around">
+            <button type="button" class="btn btn-primary mx-2" data-target="addcar.html">Add Car</button>
+            <button type="button" class="btn btn-primary mx-2" data-target="setReminder.html">Set Reminder</button>
+            <button type="button" class="btn btn-primary mx-2" data-target="scheduleMaintenance.html">Schedule Maintenance</button>
+        </div>
+        <!-- Footer -->
         <footer class="fixed-bottom bg-light py-2 border-top">
             <div class="container">
                 <div class="row text-center">
@@ -151,6 +163,6 @@
             }
         });
         </script>
-
+        <script src="js/plusbtn.js"></script>
     </body>
 </html>
