--- a/setReminder.html
+++ b/setReminder.html
@@ -11,15 +11,16 @@
     <link rel="stylesheet" href="css/myCSS.css" />
 </head>
 <body>
-    <div class="container py-5" style="background-color: #f2f2f2; border-bottom: 2px solid #ccc;">
+    <div class="container-fluid py-5" style="background-color: #f2f2f2; border-bottom: 2px solid #ccc;">
         <div class="text-center">
+            <img src="images/logo.png" alt="Logo" style="height:40px; margin-bottom: 10px;">
             <h1>Car Management</h1>
         </div>
     </div>
 
     <div class="container">
-        <div class="text-center mt-4">
-            <h2>Set Reminder</h2>
+        <div class="text-start mt-4">
+            <h2><i class="fa-regular fa-clock"></i> Set Reminder</h2>
             <form id="reminderForm" class="mt-3 needs-validation" novalidate>
                 <div class="mb-4">
                     <label for="typeReminder" class="form-label">Type of Reminder</label>
