--- a/confirmSchedule.html
+++ b/confirmSchedule.html
@@ -103,41 +103,48 @@
         </div>
     </div>
 
+    <!-- Floating Btns -->
+    <div class="floating-buttons justify-content-around">
+        <button type="button" class="btn btn-primary mx-2" data-target="addcar.html">Add Car</button>
+        <button type="button" class="btn btn-primary mx-2" data-target="setReminder.html">Set Reminder</button>
+        <button type="button" class="btn btn-primary mx-2" data-target="scheduleMaintenance.html">Schedule Maintenance</button>
+    </div>
+
     <!-- Footer -->
     <footer class="fixed-bottom bg-light py-2 border-top">
         <div class="container">
             <div class="row text-center">
-                <!-- Home Button -->
+                <!-- Reminder Button -->
                 <div class="col">
-                    <a href="index.html" class="btn btn-link text-secondary footer-btn">
-                        <i class="fa-solid fa-house"></i>
-                        <div>Home</div>
+                    <a href="index.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
+                        <i class="fa-solid fa-clock" style="margin-bottom: 2px;"></i>
+                        <div style="margin-top: 2px;">Reminders</div>
                     </a>
                 </div>
                 <!-- Garage Button -->
                 <div class="col">
-                    <a href="garage.html" class="btn btn-link text-secondary footer-btn">
-                        <i class="fa-solid fa-car"></i>
+                    <a href="garage.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
+                        <i class="fa-solid fa-car" style="margin-bottom: 2px;"></i>
                         <div>Garage</div>
                     </a>
                 </div>
                 <!-- + Button -->
                 <div class="col">
-                    <a href="new.html" class="btn btn-primary rounded-circle position-absolute top-0 start-50 translate-middle plus-btn">
+                    <a href="#" id="plusBtn" class="btn btn-primary rounded-circle position-absolute top-0 start-50 translate-middle plus-btn">
                         <i class="fa-solid fa-plus fa-lg"></i>
                     </a>
                 </div>
                 <!-- Mechanic Button -->
                 <div class="col">
-                    <a href="mechanic.html" class="btn btn-link text-secondary footer-btn">
-                        <i class="fa-solid fa-screwdriver"></i>
-                        <div>Mechanic</div>
+                    <a href="x.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
+                        <i class="fa-solid fa-map" style="margin-bottom: 2px;"></i>
+                        <div>Map</div>
                     </a>
                 </div>
                 <!-- Messages Button -->
                 <div class="col">
-                    <a href="messages.html" class="btn btn-link text-secondary footer-btn">
-                        <i class="fa-solid fa-message"></i>
+                    <a href="messages.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
+                        <i class="fa-solid fa-message" style="margin-bottom: 2px;"></i>
                         <div>Messages</div>
                     </a>
                 </div>
@@ -147,7 +154,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <!-- Add your Firebase scripts if needed for final submission -->
     <script type="module" src="js/firebase.js"></script> <!-- Ensure firebase is imported -->
     <script type="module"> // Make the main script a module
         // Import necessary Firestore functions
@@ -332,7 +338,7 @@
 
                     // Show success and redirect
                     alert(`Appointment scheduled successfully at ${shopName} on ${selectedDateVal} at ${selectedTimeVal}!`);
-                    window.location.href = 'index.html'; // Redirect to index page
+                    window.location.href = 'messages.html'; // Redirect to index page
 
                 } catch (error) {
                     console.error("Error adding reminder: ", error);
@@ -355,5 +361,10 @@
             updateAvailability();
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script type="module" src="js/addcar.js"></script>
+    <script type="module" src="js/checkAuth.js"></script>
+    <script src="js/plusbtn.js"></script>
 </body>
 </html>
