initial share implementation

--- a/definitions.html
+++ b/definitions.html
@@ -11,21 +11,19 @@
 <body>
     <div class="container-fluid py-5" style="background-color: #f2f2f2; border-bottom: 2px solid #ccc;">
         <div class="text-center">
-            <img src="images/logo.png" alt="Logo" style="height:64px; margin-bottom: 10px;">
+            <img src="images/logo.png" alt="Logo" style="height:40px; margin-bottom: 10px;">
             <h1>Car Management</h1>
         </div>
     </div>
     <div class="container py-5">
-        <h1 class="text-center mb-4"><i class="fa-solid fa-gear"></i> Definitions</h1>
-        <a href="scheduleMaintenance.html" class="btn btn-outline-secondary">
+        <h1 class="text mb-4"><a href="index.html" class="btn btn-outline-secondary">
             <i class="fa-solid fa-arrow-left"></i>
-        </a>
+        </a> <i class="fa-solid fa-gear"></i> Definitions</h1>
         <div class="card mx-auto" style="max-width: 400px;">
             <div class="card-body">
                 <h5 class="card-title mb-3">Account</h5>
                 <div id="userInfo" class="mb-3">
                     <div><strong>Email:</strong> <span id="userEmail"></span></div>
-                    <div><strong>Name:</strong> <span id="userName"></span></div>
                 </div>
                 <button id="changePasswordBtn" class="btn btn-outline-primary w-100 mb-2">
                     <i class="fa-solid fa-key"></i> Change Password
