--- a/garage.html
+++ b/garage.html
@@ -37,6 +37,7 @@
 				<button id="confirmRemoveBtn" class="btn btn-danger btn-sm">Remove</button>
 			</div>
 		</div>
+
 		<div class="container-fluid py-5" style="background-color: #f2f2f2; border-bottom: 2px solid #ccc;">
 			<div class="text-center">
 				<img src="images/logo.png" alt="Logo" style="height:40px; margin-bottom: 10px;">
@@ -55,6 +56,26 @@
 		</h1>
 		<div class="garage-container container-fluid">
 			<div class="row gx-2" id="garageRow"></div>
+		</div>
+
+		<!-- Share Car Modal -->
+		<div class="modal fade" id="shareModal" tabindex="-1">
+			<div class="modal-dialog">
+			<form id="shareForm" class="modal-content">
+				<div class="modal-header">
+				<h5 class="modal-title">Share Vehicle</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+				</div>
+				<div class="modal-body">
+				<label for="shareEmail" class="form-label">User Email</label>
+				<input type="email" id="shareEmail" class="form-control" required>
+				</div>
+				<div class="modal-footer">
+				<button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Cancel</button>
+				<button type="submit" class="btn btn-primary btn-sm">Share</button>
+				</div>
+			</form>
+			</div>
 		</div>
 
 		<!-- Floating Btns-->
