Garage changes, share implemented

--- a/addcar.html
+++ b/addcar.html
@@ -106,7 +106,7 @@
         </div>
 
         <!-- Floating Btns -->
-        <div class="floating-buttons justify-content-around">
+        <div class="floating-buttons justify-content-around" style="display:none;">
             <button type="button" class="btn btn-primary mx-2" data-target="addcar.html">Add Car</button>
             <button type="button" class="btn btn-primary mx-2" data-target="setReminder.html">Set Reminder</button>
             <button type="button" class="btn btn-primary mx-2" data-target="scheduleMaintenance.html">Schedule Maintenance</button>
