--- a/setReminder.html
+++ b/setReminder.html
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-    <div class="floating-buttons justify-content-around">
+    <div class="floating-buttons justify-content-around" style="display:none;">
         <button type="button" class="btn btn-primary mx-2" data-target="addcar.html">Add Car</button>
         <button type="button" class="btn btn-primary mx-2" data-target="setReminder.html">Set Reminder</button>
         <button type="button" class="btn btn-primary mx-2" data-target="scheduleMaintenance.html">Schedule Maintenance</button>
