--- a/messages.html
+++ b/messages.html
@@ -103,7 +103,7 @@
                 </div>
                 <!-- Mechanic Button -->
                 <div class="col">
-                    <a href="selectShop.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
+                    <a href="shops.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
                         <i class="fa-solid fa-map" style="margin-bottom: 2px;"></i>
                         <div>Map</div>
                     </a>
