falta o edit reminder e por a scroll bar mais bonita

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <div id="remindersSection" class="container mt-4 text-center">
         <h3>Your Reminders <i class="fa-regular fa-clock"></i></h3>
+        <div id="carButtonsBar" class="my-3"></div>
         <ul id="remindersList" class="list-group"></ul>
     </div>
 
@@ -59,7 +60,7 @@
                 </div>
                 <!-- Mechanic Button -->
                 <div class="col">
-                    <a href="x.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
+                    <a href="shops.html" class="btn btn-link text-secondary footer-btn d-flex flex-column align-items-center justify-content-center" style="text-decoration: none;">
                         <i class="fa-solid fa-map" style="margin-bottom: 2px;"></i>
                         <div>Map</div>
                     </a>
